# frast

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  convertGdal.cc  copy_imgui_files.sh  db.cc  db.h  dbTest.cc  frastAddo.cc  frastConvertGdal.cc  frastInfo.cc  frastMerge.cc  frastPy.cc  image.cc  image.h  makefile  meson.build  meson_options.txt  readme.md  timer.hpp  utils.hpp  webgpu.md
docker/: Dockerfile  (+2 more)
frast2/frastgl/: CMakeLists.txt
frast2/frastgl/core/: app.cc  app.h  cameras.cc  cameras.h  render_state.cc  render_state.h  shader.cc  shader.h  window.cc  window.h
frast2/frastgl/core/imgui/: imgui_app.cc  imgui_app.h  imgui_demo_app.cc
frast2/frastgl/core/implot/: demo.cc
frast2/frastgl/extra/caster/: castable.cc  castable.h
frast2/frastgl/extra/earth/: earth.cc  earth.h
frast2/frastgl/extra/ellipsoid/: ellipsoid.cc  ellipsoid.h
frast2/frastgl/extra/frustum/: frustum.cc  frustum.h
frast2/frastgl/extra/loaders/: mesh.cc  mesh.h  obj.cc  obj.h
frast2/frastgl/extra/pingPong/: pingPong.hpp  pingPong2.hpp  test.cc  test1.cc  test2.cc
frast2/frastgl/extra/textSet/: textSet.cc  textSet.h
frast2/frastgl/gt/: gt.cc  gt.h  gt_impl.hpp
frast2/frastgl/gt/ftr/: conversions.hpp  ftr.cc  ftr.h  runFtr.cc
frast2/frastgl/gt/gdal/: create_obb.cc  dataset.cc  dataset.h  gdal.cc  gdal.h  runGdal.cc  testDataset.cc
frast2/frastgl/gt/rt/: rt.cc  rt.h  runRt.cc
frast2/frastgl/gt/rt/decode/: rt_convert.hpp  rt_decode.hpp
frast2/frastgl/gt/rt/protos/: rocktree.pb.cc  rocktree.pb.h
frast2/frastgl/shaders/: basicMesh.h  earth.h  ft.h  rt.h  textSet.h
frast2/frastgl/utils/: check.hpp  eigen.h  guards.hpp
frastVk/: CMakeLists.txt
frastVk/frastVk/core/: app.cc  app.h  buffer_utils.cc  buffer_utils.h  fvkApi.cc  fvkApi.h  fvkApi_detail.cc  fvkShaders.cc  fvkShaders.h  fvkTestApp.cc  fvkUtils.hpp  imgui_app.cc  imgui_app.h  load_shader.hpp  load_shader_funcs.cc  render_state.cc  render_state.h  window.cc  window.h  window.hpp
frastVk/frastVk/core/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.h
frastVk/frastVk/entity/: simple.hpp
frastVk/frastVk/extra/: ellipsoid.hpp  headlessCopyHelper.hpp
frastVk/frastVk/extra/caster/: castable.cc  castable.h
frastVk/frastVk/extra/frustum/: frustum.cc  frustum.h
frastVk/frastVk/extra/particleCloud/: particleCloud.cc  particleCloud.h
frastVk/frastVk/extra/primitives/: earthEllipsoid.cc  earthEllipsoid.h  ellipsoid.cc  ellipsoid.h
frastVk/frastVk/extra/text/: font.hpp  textSet.cc  textSet.h
frastVk/frastVk/gt/: gt.cc  gt.h  gtRenderSets.cc  gt_impl.hpp
frastVk/frastVk/gt/ftr/: conversions.hpp  ftr.cc  ftr.h  runFtrTest.cc
frastVk/frastVk/gt/renderSets/: gtRenderSets.cc  gtRenderSetsMulti.cc  utils.hpp
frastVk/frastVk/gt/rt/: rt.cc  rt.h  runRt.cc  runRtTest.cc
frastVk/frastVk/rt/: parse.cc  rt.cc  rt.h  rtRenderSets.cc  rt_convert.hpp  rt_decode.hpp  rt_raytrace.cc  run.cc
frastVk/frastVk/shaders/: simple.f.glsl  simple.v.glsl  textured.f.glsl  textured.v.glsl
frastVk/frastVk/shaders/clipmap/: 1.f.glsl  1.v.glsl
frastVk/frastVk/shaders/compiled/: all.cc  all.hpp  particle.hpp  tst.cc
frastVk/frastVk/shaders/extra/: earth.f.glsl  fullScreenQuad.v.glsl  primEllipsoid.f.glsl  textSet.f.glsl  textSet.v.glsl
frastVk/frastVk/shaders/frustum/: frustum.f.glsl  frustum.v.glsl  path.f.glsl  path.v.glsl
frastVk/frastVk/shaders/ftr/: cast.f.glsl  cast.v.glsl  ftr1.f.glsl  ftr1.v.glsl
frastVk/frastVk/shaders/particleCloud/: down.f.glsl  down.v.glsl  output.f.glsl  particle.f.glsl  particle.v.glsl  up.f.glsl
frastVk/frastVk/shaders/rt/: cast.f.glsl  cast.v.glsl  dbgLines.f.glsl  dbgLines.v.glsl  debugObb.f.glsl  debugObb.v.glsl  rt1.f.glsl  rt1.v.glsl
frastVk/frastVk/shaders/rtRaytrace/: 1.common.glsl  1.rch.glsl  1.rg.glsl  1.rm.glsl
frastVk/frastVk/shaders/simple/: shape.f.glsl  shape.v.glsl  tri.v.glsl
frastVk/frastVk/shaders/tiledRenderer/: 1.v.glsl
frastVk/frastVk/shaders/tiledRenderer2/: 1.f.glsl  1.v.glsl  cast.f.glsl  cast.v.glsl
frastVk/frastVk/tiled_renderer2/: runGlobe.cc  tiled_renderer.cc  tiled_renderer.h
frastVk/frastVk/utils/: eigen.h
frastVk/pysrc/: compile_shaders.py  compile_shaders_2.py  decode.py  exportObbs.py  generate_cameras.py  prepare_bitmap_font.py  transformAuthalicToGeodetic.py  utils.py
frastVk/src/: globe.cc  render_state.h
frastVk/src/clipmap1/: clipmap1.h
frastVk/src/core/: app.cc  app.h  buffer_utils.cc  buffer_utils.h  render_state.cc  render_state.h
frastVk/src/extra/frustum/: frustum.cc  frustum.h
frastVk/src/extra/particleCloud/: particleCloud.cc  particleCloud.h
frastVk/src/rt/: parse.cc  rt.cc  rt.h  rt_decode.hpp  run.cc
frastVk/src/rt/protos/: rocktree.pb.cc  rocktree.pb.h
frastVk/src/shaders/: simple.v.glsl  textured.f.glsl
frastVk/src/shaders/clipmap/: 1.f.glsl  1.v.glsl
frastVk/src/shaders/extra/: earth.f.glsl
frastVk/src/shaders/particleCloud/: down.f.glsl  down.v.glsl  output.f.glsl  particle.v.glsl  up.f.glsl
frastVk/src/shaders/rt/: rt1.f.glsl  rt1.v.glsl
frastVk/src/shaders/tiledRenderer/: 1.f.glsl  1.v.glsl
frastVk/src/shaders/tiledRenderer2/: 1.f.glsl  cast.f.glsl
frastVk/src/tiled_renderer/: tiled_renderer.cc  tiled_renderer.h
frastVk/src/tiled_renderer2/: conversions.hpp  globe.cc  runGlobe.cc  tiled_renderer.cc  tiled_renderer.h
frastVk/src/utils/: eigen.h
frastVk/src/vk/: app.cc  app.h  bitmap_font.h  buffer_utils.cc  buffer_utils.h  render_state.cc  render_state.h  window.hpp
frastVk/src/vk/clipmap/: clipmap1.cc  clipmap1.h  clipmap1_load.cc
frastVk/src/vk/clipmap1/: clipmap1.cc  clipmap1.h
frastVk/src/vk/tiled_renderer/: tiled_renderer.cc  tiled_renderer.h
frastWebGpu/: build_dawn.sh  meson.build  meson_options.txt  webgpu_helpers.cc  webgpu_helpers.h
frastWebGpu/apps/: basic2.cc  basicGlfwTriangle.cc  dawn_triangle.cc  test_native.cc
raytrace/: CMakeLists.txt  readme.md
raytrace/src/: buffer.hpp  gpu_buffer.hpp  helper_cuda.h  main.cc  trace.h  trace_cpu.cc
raytrace/src/decode/: decode.cc  decode.h  rt_decode.hpp
(+126 files in other folders)
