option('writer_threads', type: 'integer', value: 4)
option('tests', type: 'feature', value: 'disabled')
option('static_opencv', type: 'feature', value: 'disabled')
option('imgui', type: 'feature', value: 'enabled')
option('imgui_demo', type: 'feature', value: 'disabled')

option('webgpu', type: 'feature', value: 'disabled')
option('dawn_dir', type: 'string', value: '')
option('emscripten', type: 'feature', value: 'disabled')
